fix aunjau jump

--- a/src/app/game/aunjai/popup-continue/popup-continue.component.scss
+++ b/src/app/game/aunjai/popup-continue/popup-continue.component.scss
@@ -22,21 +22,18 @@
     background-size: auto 100%;
     background-position-x: center;
     background-repeat: no-repeat;
-    margin-left: -12px;
-    top: -10vh;
 }
 
 .playcompleteENG {
+    background: transparent url(../../../../assets/aunjaiAssets/bg/ge_points_eng.png);
     background-position: center;
     min-height: 100%;
     min-width: 100%;
     position: fixed;
-    background: transparent url(../../../../assets/aunjaiAssets/bg/ge_points_eng.png);
     background-size: auto 100%;
     background-position-x: center;
     background-repeat: no-repeat;
-    margin-left: -12px;
-    top: -10vh;
+
 }
 .close {
     background: transparent url(../../../../assets/aunjaiAssets/component/close_ic-min.png);
