--- a/src/app/game/aunjai/popup-win/popup-win.component.scss
+++ b/src/app/game/aunjai/popup-win/popup-win.component.scss
@@ -122,7 +122,7 @@ aunjai-logo-ENG{
 .buttonGetTreat {
     background: transparent url(../../../../assets/aunjaiAssets/component/mini/btn@2x-min.png);
     border: none;
-    margin-top: 42vh;
+    bottom: 20%;
     background-position: center;
     min-height: 10%;
     min-width: 42%;
