--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,3 +18,8 @@
 }
 
 
+
+html,body{
+  height:100vh!important;
+  overflow: hidden !important;
+}
